--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 
 
 main {
-    background-color: #b8b8b8;
+    background-color: #2178BF;
     padding: 30px;
     padding-right: 10px;
     border-radius: 10px 10px 0px 0px;
@@ -75,7 +75,7 @@ body {
     height: 100%;
     width: 100%;
     place-items: center;
-    background-color: #4d4d4d;
+    background-color:#0a2031;
 }
 
 
@@ -91,7 +91,7 @@ body {
     border-radius: 50px;
     cursor: pointer;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.192);
-    transition: all 0.4s ease-out;
+    transition: all 0.3s ease-out;
     font-family: var(--fontebebas);
     
 
@@ -105,7 +105,7 @@ body {
     text-align: center;
     line-height: 60px;
     border-radius: 50px;
-    transition: all 0.5s ease-out;
+    transition: all 0.3s ease-out;
 
 }
 
@@ -147,7 +147,7 @@ body {
 .container .button .icon {
     font-size: 25px;
     line-height: 60px;
-    transition: all 0.5 ease-out;
+    transition: all 0.3 ease-out;
     
 }
 
@@ -155,14 +155,14 @@ body {
     font-size: 20px;
     font-weight: 500px;
     margin-left: 10px;
-    transition: all 0.5 ease-out;
+    transition: all 0.3 ease-out;
       
    
 }
 
  
 
-.container .button:nth-child(1):hover a span {
+.container  .button:nth-child(1):hover a span {
     color: var(--Whatsapp);
     text-decoration: underline var(--Whatsapp);
     font-family: var(--fontebebas);
@@ -174,6 +174,7 @@ body {
     color: var(--Linkedin);
     text-decoration: underline var(--Linkedin);
     font-family: var(--fontebebas);
+    
 }
 
 .container .button:nth-child(3):hover span{
@@ -205,8 +206,8 @@ body {
 
 
 footer{
-    background-color: black;
-    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     padding: 21.1px;
     text-align: center;
     font-family: var(--fonte-padrao);
@@ -217,13 +218,13 @@ footer{
 }
 
 footer a{
-    color: white;
+    color: #0a2031;
     text-decoration: none;
 }
 
 footer a:hover {
     text-decoration: underline;
-    color: #2998f3fa;
+    color:#0a2031;
 }
 
 
